--- a/SIGIT/appsettings.json
+++ b/SIGIT/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=11D-MngSystDS;Database=SIGIT;Trusted_Connection=True;Encrypt=False;"
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "Notificaciones SIGIT",
+    "SenderEmail": "david.sarmiento@autofinanciera.com.co",
+    "SenderPassword": "csudlauiydpjoqry"
   }
 }
